fix campaign page spacing

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -2404,9 +2404,9 @@ q:before, q:after {
 }
 
 .node-type-takepart-campaign #page {
-    padding-top: 25px;
+    padding-top: 10px;
     padding-right: 0;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
     padding-left: 10px;
 }
 
